--- a/TinDog Start Here/index.html
+++ b/TinDog Start Here/index.html
@@ -206,7 +206,7 @@
 
   <!-- Footer -->
 
-  <footer class="color-section" id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
       <i class="social-icon fa-brands fa-twitter footer-fa"></i>
       <i class="social-icon fa-brands fa-facebook-f footer-fa"></i>
